2020-10-04         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Minor edits.

	Unrelated:

	* gawktexi (Wc Program): Update to POSIX, support both bytes
	and characters via the gawkextlib mbs extension.

2020-10-01         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (Split Program): Rewrite split to be POSIX
	compliant. Update all the prose.
	* wordlist: Update.

2020-09-24         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Fix a spelling error.
	* wordlist, wordlist2, wordlist3: Remove words that spell
	now recognizes as real words.
	* gawkinet.texi: Fix a spelling error.
	* Makefile.am (spellinet): New target.
	* wordlist4: New file.

2020-09-18         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Minor fixes. Thanks to Antonio Columbo for
	bringing them to my attention.

2020-09-13         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (Egrep Program): Improve to be POSIX compliant.
	Update explanatory text as well.

2020-09-11         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (Id Program): Rewrite to be POSIX compliant.
	Update explanatory text as well.

2020-09-04         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Index BWK quotes separately. Finish using "BWK awk"
	everywhere. Fix up text with exercise for uniq.awk in both
	places.

2020-09-01         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.1: Minor edits.
	* awkcard.in: Ditto.

2020-08-31         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (Uniq Program): Updated uniq.awk to follow 2020 POSIX.

2020-08-26         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Fix some small mistakes / typos.
	Adjust the prose some as well.

2020-08-25         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (BEGINFILE/ENDFILE): Document that as of 5.1.1, in
	a BEGINFILE, the record and fields are cleared.  Fixes an issue