@@ -46336,8 +46336,3 @@ But to use it you have to say
 which sorta sucks.
 
 TODO:
-FIXME:
-Add a section explaining recursion from ground zero. Probably
-easiest to do it with factorial as the example. Explain that
-recursion needs a stopping condition. Thanks to
-Bill Duncan <bduncan@beachnet.org> for the suggestion.
