@@ -4,8 +4,13 @@
 
 	Unrelated:
 
-	* gawktexi (Wc Program): Update to POSIX, support both bytes
+	* gawktexi.in (Wc Program): Update to POSIX, support both bytes
 	and characters via the gawkextlib mbs extension.
+
+	Unrelated:
+
+	* gawktexi.in: Remove TODO at end of file related to recursion;
+	it's already handled.
 
 2020-10-01         Arnold D. Robbins     <arnold@skeeve.com>
 
